# analyzed

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish.yml  release.yml
crates/analyzed/: Cargo.toml
crates/analyzed-bridge/: Cargo.toml  README.md
crates/analyzed-bridge/src/: edit.rs  lib.rs
crates/analyzed-daemon/: Cargo.toml  README.md
crates/analyzed-daemon/src/: lib.rs
crates/analyzed-ipc/: Cargo.toml  README.md
crates/analyzed-ipc/src/: lib.rs
crates/analyzed-ra/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-base-db/: Cargo.toml  build.rs
crates/analyzed-ra-base-db/src/: lib.rs
crates/analyzed-ra-hir/: Cargo.toml  build.rs
crates/analyzed-ra-hir-def/: Cargo.toml  build.rs
crates/analyzed-ra-hir-def/src/: lib.rs
crates/analyzed-ra-hir-expand/: Cargo.toml  build.rs
crates/analyzed-ra-hir-expand/src/: lib.rs
crates/analyzed-ra-hir-ty/: Cargo.toml  build.rs
crates/analyzed-ra-hir-ty/src/: lib.rs
crates/analyzed-ra-hir/src/: lib.rs
crates/analyzed-ra-ide/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-assists/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-assists/src/: lib.rs
crates/analyzed-ra-ide-completion/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-completion/src/: lib.rs
crates/analyzed-ra-ide-db/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-db/src/: analyzed.rs  lib.rs  search_scope.rs  symbol_index.rs
crates/analyzed-ra-ide-db/tests/: lib_parity.rs
crates/analyzed-ra-ide-diagnostics/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-diagnostics/src/: lib.rs
crates/analyzed-ra-ide-ssr/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-ide-ssr/src/: lib.rs
crates/analyzed-ra-ide/src/: analyzed.rs  lib.rs  visibility.rs
crates/analyzed-ra-ide/tests/: lib_parity.rs
crates/analyzed-ra-load-cargo/: Cargo.toml  README.md  build.rs
crates/analyzed-ra-load-cargo/src/: analyzed.rs  lib.rs  workspace_load.rs
crates/analyzed-ra-project-model/: Cargo.toml  build.rs
crates/analyzed-ra-project-model/src/: lib.rs
crates/analyzed-ra/src/: analyzed_bridge.rs  analyzed_session.rs  global_state.rs  lib.rs  main_loop.rs  reload.rs  session.rs  shared_analyzer.rs  slow_tests.rs
crates/analyzed-ra/src/diagnostics/: flycheck_location.rs  flycheck_to_proto.rs
crates/analyzed-ra/src/handlers/: dispatch.rs  notification.rs
crates/analyzed-ra/tests/: lib_parity.rs  lsp_parity.rs
crates/analyzed/src/: main.rs
xtask/: Cargo.toml
xtask/src/: dist.rs  main.rs
