[workspace]
members = [
    "crates/analyzed-bridge",
    "crates/analyzed",
    "crates/analyzed-daemon",
    "crates/analyzed-ipc",
    "crates/analyzed-ra",
    "crates/analyzed-ra-ide",
    "crates/analyzed-ra-ide-assists",
    "crates/analyzed-ra-ide-completion",
    "crates/analyzed-ra-ide-db",
    "crates/analyzed-ra-ide-diagnostics",
    "crates/analyzed-ra-ide-ssr",
    "crates/analyzed-ra-load-cargo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
analyzed-daemon = { path = "crates/analyzed-daemon" }
analyzed-ipc = { path = "crates/analyzed-ipc" }
ra_ap_rust-analyzer = { path = "crates/analyzed-ra" }

anyhow = "1.0.102"
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
daemonize = "0.5.0"
directories = "6.0.0"
fs4 = "1.1.0"
lsp-server = "0.7.9"
lsp-types = "0.95.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
