[workspace]
members = [
    "crates/analyzed-bridge",
    "crates/analyzed",
    "crates/analyzed-daemon",
    "crates/analyzed-ipc",
    "crates/analyzed-ra",
    "crates/analyzed-ra-ide",
    "crates/analyzed-ra-ide-assists",
    "crates/analyzed-ra-ide-completion",
    "crates/analyzed-ra-ide-db",
    "crates/analyzed-ra-ide-diagnostics",
    "crates/analyzed-ra-ide-ssr",
    "crates/analyzed-ra-load-cargo",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
analyzed-daemon = { path = "crates/analyzed-daemon" }
analyzed-ipc = { path = "crates/analyzed-ipc" }
ra_ap_rust-analyzer = { path = "crates/analyzed-ra" }

anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "string"] }
crossbeam-channel = "0.5.15"
lsp-server = "0.7.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
windows-sys = "0.61"

[profile.dev]
debug = 1

[profile.dev.package]
rowan.opt-level = 3
rustc-hash.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
serde.opt-level = 3
salsa.opt-level = 3
dissimilar.opt-level = 3
miniz_oxide.opt-level = 3
