[package]
name = "analyzed-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time patching support for analyzed rust-analyzer bridge crates"

[dependencies]
flate2 = "1.1.9"
ra_ap_syntax = "=0.0.340"
serde_json.workspace = true
sha2 = "0.11.0"
tar = "0.4.46"
toml = "1.1.2"
