[package]
name = "analyzed-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared rust-analyzer daemon service for analyzed"

[dependencies]
analyzed-ipc.workspace = true
ra_ap_rust-analyzer.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
