[package]
name = "ra_ap_base_db"
version = "0.0.334"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "ra_ap_base_db"
path = "src/lib.rs"
doctest = false
test = false

[features]
default = []
in-rust-tree = []

[build-dependencies]
analyzed-bridge = { path = "../analyzed-bridge" }

[dependencies]
cfg = { version = "=0.0.334", package = "ra_ap_cfg", features = ["tt", "syntax"] }
dashmap = { version = "=6.1.0", features = ["raw-api", "inline"] }
indexmap = { version = "2.9.0", features = ["serde"] }
intern = { version = "=0.0.334", package = "ra_ap_intern" }
la-arena = { version = "0.3.1" }
query-group = { version = "=0.0.334", package = "ra_ap_query-group-macro" }
rustc-hash = { version = "2.1.1" }
salsa = { version = "0.26.2", features = ["rayon", "salsa_unstable", "macros", "inventory"], default-features = false }
salsa-macros = { version = "0.26.2" }
semver = { version = "1.0.26" }
span = { version = "=0.0.334", package = "ra_ap_span" }
syntax = { version = "=0.0.334", package = "ra_ap_syntax" }
tracing = { version = "0.1.41", features = ["std"], default-features = false }
triomphe = { version = "0.1.14", features = ["std"], default-features = false }
vfs = { version = "=0.0.334", package = "ra_ap_vfs" }

[dev-dependencies]
ra_ap_base_db = "=0.0.334"

[lints.clippy]
assigning_clones = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
enum_variant_names = "allow"
len_without_is_empty = "allow"
literal_string_with_formatting_args = "allow"
new_ret_no_self = "allow"
perf = { level = "deny", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
restriction = { level = "allow", priority = -1 }
result_unit_err = "allow"
single_match = "allow"
str_to_string = "warn"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_long_first_doc_paragraph = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_map_or = "allow"
useless_asref = "allow"
vec_init_then_push = "allow"
wrong_self_convention = "allow"

[lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unexpected_cfgs = { level = "warn", priority = 0, check-cfg = ["cfg(bootstrap)", "cfg(no_salsa_async_drops)"] }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
