[package]
name = "analyzed-ra-ide"
version.workspace = true
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Patched ra_ap_ide bridge crate for analyzed"
build = "build.rs"

[lib]
name = "ra_ap_ide"
path = "src/lib.rs"
doctest = false
test = false

[features]
in-rust-tree = []

[build-dependencies]
analyzed-bridge = { path = "../analyzed-bridge", version = "=0.4.2" }

[dependencies]
arrayvec = { version = "0.7.6" }
cfg = { version = "=0.0.341", package = "ra_ap_cfg", features = ["tt", "syntax"] }
cov-mark = { version = "2.0.0" }
dot = { version = "0.1.4" }
either = { version = "1.15.0" }
hir = { version = "=0.0.341", package = "ra_ap_hir" }
ide-assists = { path = "../analyzed-ra-ide-assists", package = "analyzed-ra-ide-assists", version = "=0.4.2" }
ide-completion = { path = "../analyzed-ra-ide-completion", package = "analyzed-ra-ide-completion", version = "=0.4.2" }
ide-db = { path = "../analyzed-ra-ide-db", package = "analyzed-ra-ide-db", version = "=0.4.2" }
ide-diagnostics = { path = "../analyzed-ra-ide-diagnostics", package = "analyzed-ra-ide-diagnostics", version = "=0.4.2" }
ide-ssr = { path = "../analyzed-ra-ide-ssr", package = "analyzed-ra-ide-ssr", version = "=0.4.2" }
itertools = { version = "0.15.0" }
macros = { version = "=0.0.341", package = "ra_ap_macros" }
nohash-hasher = { version = "0.2.0" }
oorandom = { version = "11.1.5" }
profile = { version = "=0.0.341", package = "ra_ap_profile" }
pulldown-cmark = { version = "0.9.6", default-features = false }
pulldown-cmark-to-cmark = { version = "10.0.4" }
rustc-hash = { version = "2.1.1" }
rustc_apfloat = { version = "0.2.3" }
smallvec = { version = "1.15.1", features = ["const_new", "union", "const_generics"] }
span = { version = "=0.0.341", package = "ra_ap_span" }
stdx = { version = "=0.0.341", package = "ra_ap_stdx" }
syntax = { version = "=0.0.341", package = "ra_ap_syntax" }
tracing = { version = "0.1.41", features = ["std"], default-features = false }
triomphe = { version = "0.1.14", features = ["std"], default-features = false }
url = { version = "2.5.4" }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "emscripten")))'.dependencies]
toolchain = { version = "=0.0.341", package = "ra_ap_toolchain" }

[dev-dependencies]
expect-test = "1.5.1"
test-fixture = { version = "=0.0.341", package = "ra_ap_test_fixture" }
test-utils = { version = "=0.0.341", package = "ra_ap_test_utils" }

[target.'cfg(any())'.dependencies]
ra_ap_ide = "=0.0.341"

[lints.clippy]
assigning_clones = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
enum_variant_names = "allow"
len_without_is_empty = "allow"
literal_string_with_formatting_args = "allow"
new_ret_no_self = "allow"
perf = { level = "deny", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
restriction = { level = "allow", priority = -1 }
result_unit_err = "allow"
single_match = "allow"
str_to_string = "warn"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_long_first_doc_paragraph = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_map_or = "allow"
useless_asref = "allow"
vec_init_then_push = "allow"
wrong_self_convention = "allow"

[lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unexpected_cfgs = { level = "warn", priority = 0, check-cfg = ["cfg(bootstrap)", "cfg(no_salsa_async_drops)"] }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
